# pycmd

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
cmdkit/: gsearch.py  ignore.py  ppm.py  venv.py
pycmd/: console.py  gsearch.py  hiveql.py  html.py  ignore.py  license.py  password.py  ppm.py  repo.py  utils.py  venv.py
tests/: test_hiveql.py  test_html.py  test_password.py
tests/data/: no_table.html  one_table.html  table_00.csv  table_01.csv  test.hql  test_copy_01.hql  test_copy_02.hql  two_table.html
