[metadata]
name = pycmd
version = attr: pycmd.__version__
description = pycmd - Command Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Song
author_email = elisong.ah@gmail.com
license = MIT
license_file = LICENSE
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  lxml == 4.6.3
  google == 3.0.0
  mdutils == 1.3.1
  simple-term-menu == 1.4.1


[options.entry_points]
console_scripts =
  venv = pycmd.venv:main
  ppm = pycmd.ppm:main
  license = pycmd.license:main
  ignore = pycmd.ignore:main
  gsearch = pycmd.gsearch:main
  password = pycmd.password:main

[options.packages.find]
exclude =
  tests
