[metadata]
name = pycmd
version = attr: pycmd.__version__
description = pycmd - Command Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Song
author_email = elisong.ah@gmail.com
license = MIT
license_file = LICENSE
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  lxml>=4.8.0
  html5lib>=1.1
  beautifulsoup4>=4.9.0
  pandas>=1.4.1
  mdutils==1.3.1
  simple-term-menu==1.4.1
  pyperclip==1.8.2
  googlesearch-python==1.1.0

[options.entry_points]
console_scripts =
  venv = pycmd.venv:main
  ppm = pycmd.ppm:main
  license = pycmd.license:main
  ignore = pycmd.ignore:main
  gsearch = pycmd.gsearch:main
  password = pycmd.password:main
  hiveql = pycmd.hiveql:main
  html = pycmd.html:main

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 120
ignore=E402,E501
extend-ignore =
  E203
per-file-ignores =
  __init__.py:F401
