[metadata]
name = pycmd
version = attr: pycmd.__version__
description = pycmd - Command Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Eli Song
author_email = elisong.ah@gmail.com
license = MIT
license_file = LICENSE
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  lxml>=4.8.0
  html5lib>=1.1
  beautifulsoup4>=4.9.0
  click==8.0.4
  pandas>=1.4.1
  mdutils==1.3.1
  pyperclip==1.8.2
  pysocks==1.7.1
  google==3.0.0
  inquirerpy==0.3.3
  requests==2.27.1


[options.entry_points]
console_scripts =
  gsearch = pycmd.gsearch:main
  ppm = pycmd.ppm:main
  venv = pycmd.venv:main
  license = pycmd.license:main
  ignore = pycmd.ignore:main
  password = pycmd.password:main
  html = pycmd.html:main
  hiveql = pycmd.hiveql:main
  repo = pycmd.repo:cli

[options.packages.find]
exclude =
  tests

[flake8]
max-line-length = 120
ignore=E402,E501
extend-ignore =
  E203
per-file-ignores =
  __init__.py:F401
